--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                </ul>
             </nav>
          </div>
+         <div class="search">
+            <input type="search" name="search" id="search" placeholder="Búsqueda">
+            <button type="submit">Buscar</button>
+         </div>
       </header>
 
       <section>
